pmhso/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pmhso-default-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = "pmh.so") {
        return 301 $scheme://pmh.codes$request_uri;
      }
      if ($host ~* ^(?<subdomain>.+)\.pmh\.so$) {
        return 301 $scheme://$subdomain.pmh.codes$request_uri;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: pmh.so
  - host: '*.pmh.so'
